--- a/css/main.css
+++ b/css/main.css
@@ -178,7 +178,7 @@ textarea, label {
     display: none; }
 
 .loading-mask {
-  background-color: #FA6862;
+  background-color: #1e2530;
   height: 100%;
   left: 0;
   position: absolute;
